[FEAT] #183 식재료 생성에 따른 기존 코드 변경
